@@ -39,34 +39,39 @@ void oem_cost_y( Numeric& cost_y,
                  const Numeric&  normfac );
 
 // Optimal estimation method for linear models.
-void oem_linear_nform( Vector& x,
-                       Matrix& G,
-                       Matrix& J,
-                       Vector& yf,
-                       Numeric& cost_y, 
-                       Numeric& cost_x,
-                       ForwardModel &F,
-                       ConstVectorView xa,
-                       ConstVectorView y,
-                       ConstMatrixView SeInv,
-                       ConstMatrixView SxInv,
-                       const Numeric& cost_start,
-                       const bool& exact_j,
-                       const bool& verbose );
+Index oem_linear_nform( Vector& x,
+                        Matrix& G,
+                        Matrix& J,
+                        Vector& yf,
+                        Numeric& cost_y, 
+                        Numeric& cost_x,
+                        ForwardModel &F,
+                        ConstVectorView xa,
+                        ConstVectorView x_norm,
+                        ConstVectorView y,
+                        ConstMatrixView SeInv,
+                        ConstMatrixView SxInv,
+                        const Numeric& cost_start,
+                        const bool& verbose );
 
 // Optimal estimation for non-linear models using Gauss-Newton method.
-bool oem_gauss_newton( Vector& x,
-                       Vector& yf,
-                       Matrix& G,
-                       Matrix& J,
-                       ConstVectorView y,
-                       ConstVectorView xa,
-                       ConstMatrixView SeInv,
-                       ConstMatrixView SxInv,
-                       ForwardModel& K,
-                       Numeric tol,
-                       Index maxiter,
-                       bool verbose );
+Index oem_gauss_newton( Vector& x,
+                        Matrix& G,
+                        Matrix& J,
+                        Vector& yf,
+                        Numeric& cost_y, 
+                        Numeric& cost_x,
+                        Index& used_iter,
+                        ForwardModel &F,
+                        ConstVectorView xa,
+                        ConstVectorView x_norm,
+                        ConstVectorView y,
+                        ConstMatrixView SeInv,
+                        ConstMatrixView SxInv,
+                        const Numeric& cost_start,
+                        const Index maxIter,
+                        const Numeric tol,
+                        const bool& verbose );
 
 // Optimal estimation for non-linear models using Levenberg-Marquardt method.
 bool oem_levenberg_marquardt( Vector& x,
