@@ -2785,8 +2785,12 @@ void Workspace::define_wsv_data()
         "Basic diagnostics of an OEM type inversion.\n"
         "\n"
         "This is a vector of length 5, having the elements (0-based index):\n"
-        "  0: Convergence, 0 = converged, 1 = not known, 2 = failure, and\n"
-        "     3 = too high start cost.\n"
+        "  0: Convergence status, with coding\n"
+        "       0 = converged\n"
+        "       1 = max iterations reached\n"
+        "       2 = max gamma of LM reached\n"
+        "       9 = some error when calling *inversion_iterate_agenda*\n" 
+        "      99 = too high start cost.\n"
         "  1: Start value of cost function.\n"
         "  2: End value of cost function.\n"
         "  3: End value of y-part of cost function.\n"
